crates/tui/snapshots/fullscreen/session_manager/agents_manager_transient_session_details.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]

─ Dashboard ───────────────────────────────────────────────────────────────────── Group: Status  g ─
            ┌── Session details ──────────────────────────────────────────────────[✗]─┐
    Sessions│                                                                         │
  Idle (1) -│  Session:     Snapshot session                                          │
> ○ Snapshot│  Session ID:  current                                                   │
            │  Lifecycle:   active                                                    │
  Archived (│  Status:      idle                                                      │
            │  Threads:     1                                                         │
            │  Total usage: 0 tokens                                                  │
            │  Model calls: 0                                                         │ected
            │  Thread:      Root · main · idle                                        │
            │  ID:          current                                                   │
            │  Lifecycle:   active                                                    │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            └─────────────────────────────────────────────────────────────────────────┘
                                                                  │
                                                                  │
                                                                  │

  ↑/↓ scroll  ·  Esc to close
