crates/tui/snapshots/fullscreen/session_manager/dashboard_command_completion.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]
























  ─────────────────────────────────────────────────────────────────────────────────────────── 1/1
  /dashboard                 open Dashboard
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > /dashboard
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual
