crates/tui/snapshots/fullscreen/session_manager/dashboard_group_arrow_hints_chinese.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: "format!(\"Expanded\\n{expanded}\\n\\nCollapsed\\n{collapsed}\")"
---
Expanded
  .                                                                                       [仪 表 盘 ]

─ 仪 表 盘  ─────────────────────────────────────────────────────────────────────────── 分 组 : 状 态   g ─

    会 话                                状 态              更 新 时 间   │ 会 话 详 情
> 空 闲  (1) -                                                      │
  ○ Snapshot session                   空 闲                        │   空 闲  (1)
                                                                  │
  已 归 档  (0)                                                      │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter/← 折 叠  · g 切 换 分 组  · Esc 返 回

Collapsed
  .                                                                                       [仪 表 盘 ]

─ 仪 表 盘  ─────────────────────────────────────────────────────────────────────────── 分 组 : 状 态   g ─

    会 话                                状 态              更 新 时 间   │ 会 话 详 情
> 空 闲  (1) +                                                      │
                                                                  │   空 闲  (1)
  已 归 档  (0)                                                      │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter/→ 展 开  · g 切 换 分 组  · Esc 返 回
