crates/tui/snapshots/fullscreen/session_manager/dashboard_open_selected_session.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: "format!(\"Dashboard\\n{before}\\n\\nOpened selected conversation\\n{}\",\nrender(&app))"
---
Dashboard
  .                                                                                       [仪 表 盘 ]

─ 仪 表 盘  ─────────────────────────────────────────────────────────────────────────── 分 组 : 状 态   g ─

    会 话                                状 态              更 新 时 间   │ 会 话 详 情
  空 闲  (2) -                                                      │
  ○ Snapshot session                   空 闲                        │ Selected conversation
> ○ Selected conversation              空 闲                        │ 空 闲
                                                                  │
  已 归 档  (0)                                                      │ 项 目
                                                                  │ 未 指 定 项 目
                                                                  │ 模 型 : 未 选 择 模 型
                                                                  │
                                                                  │ 线 程 : 1
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter/→ 打 开  · Space 预 览  · Ctrl+X 归 档  · i 详 情  · g 切 换 分 组  · Esc 返 回

Opened selected conversation
  .                                                                                       [仪 表 盘 ]


























  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型

  ⏸ 手 动  · ← 仪 表 盘  · ? 查 看 快 捷 键
