crates/tui/snapshots/fullscreen/session_manager/session_details_loading.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: loading
---
  .                                                                                    [Dashboard]

─ Dashboard ───────────────────────────────────────────────────────────────────── Group: Status  g ─
            ┌── Session details ──────────────────────────────────────────────────[✗]─┐
    Sessions│                                                                         │
  Idle (1) -│  Session:     Snapshot session                                          │
> ○ Snapshot│  Session ID:  current                                                   │
            │  Lifecycle:   active                                                    │
  Archived (│  Status:      idle                                                      │
            │  Threads:     1                                                         │
            │  Total usage: 0 tokens                                                  │
            │  Model calls: 0                                                         │ected
            │  Threads:     Loading…                                                  │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            └─────────────────────────────────────────────────────────────────────────┘
                                                                  │
                                                                  │
                                                                  │

  ↑/↓ scroll  ·  Esc to close
