crates/tui/snapshots/fullscreen/session_manager/session_manager_archived_expanded.snap
---
source: crates/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]

─ Dashboard ───────────────────────────────────────────────────────────────────── Group: Status  g ─

    Sessions                           Status           Updated   │ Session details
  Idle (1) -                                                      │
  ○ Snapshot session                   idle                       │ Archived chat
                                                                  │ idle
  Archived (1) -                                                  │
> ○ Archived chat                      idle                       │ Project
                                                                  │ No project
                                                                  │ Model: No model selected
                                                                  │
                                                                  │ Threads: 1
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter/→ to restore · Space to preview · Ctrl+X to delete · i to details · Esc to return
